# CMakeTestProj

./: .gitignore  .gitmodules  Build.bat  Build.sh
Source/: CMakeConfig.h.in  CMakeLists.txt  Main.cpp
Source/glfwApp/: Main.cpp
